--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import AZVisionTitleImage from '../../public/azvision-title.png';
 			fungovat zcela nezávisle na ostatních systémech.
 		</p>
 		<p>
-			<div>Interested? Write us!</div>
+			<div>Chcete vědět víc?</div>
 			<b>info@azvision.cz</b>
 		</p>
 
