--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,15 +10,19 @@ import AZVisionTitleImage from '../../public/azvision-title.png';
 		<p class="instructions">
 			Vytváříme systémy pro detekci objektů přesně podle Vašich požadavků. Spektrum použití je široké. Kromě
 			jednoduchého počítání objektů je možné systém „natrénovat“ i na odlišení různých typů objektů v obrazu.
-			Například rozpoznávání cyklistů, bruslařů a běžců na cyklostezce.
+			Například rozpoznávání cyklistů a běžců na cyklostezce či počítání mandarinek na pásu.
 			<br/>
 			<br/>
 			Systém je vždy ušitý na míru zákazníkovi, takže je možné ho integrovat s jeho stávajícími systémy, nebo může
 			fungovat zcela nezávisle na ostatních systémech.
 		</p>
 		<p>
-			<div>Chcete vědět víc?</div>
-			<b>info@azvision.cz</b>
+			<div>
+				Zajímá Vás to? Napište!
+			</div>
+			<div>
+				info@azvision.cz
+			</div>
 		</p>
 
 
