--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,12 @@ import AZVisionTitleImage from '../../public/azvision-title.png';
 		<Image src={AZVisionTitleImage} alt="A bird sitting on a nest of eggs."/>
 		<p class="instructions">
 			Vytváříme systémy pro detekci objektů přesně podle Vašich požadavků. Spektrum použití je široké. Kromě
-			jednoduchého počítání objektů je možné systém „natrénovat“ i na odlišení různých typů objektů v obrazu.
+			jednoduchého počítání objektů je možné „natrénovat“ i na odlišení různých typů objektů v obrazu.
 			Například rozpoznávání cyklistů a běžců na cyklostezce či počítání mandarinek na pásu.
 			<br/>
 			<br/>
-			Systém je vždy ušitý na míru zákazníkovi, takže je možné ho integrovat s jeho stávajícími systémy, nebo může
-			fungovat zcela nezávisle na ostatních systémech.
+			Systém je vždy ušitý na míru zákazníkovi, takže je možné ho integrovat s jeho stávající infrastrukturou, nebo může
+			fungovat zcela nezávisle.
 		</p>
 		<p>
 			<div>
