--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import { Image } from 'astro:assets';
 import Layout from '../layouts/Layout.astro';
-import AZVisionTitleImage from '../../public/azvision-title.png';
+import AZVisionLogoImage from '../../public/azvision-logo.png';
 ---
 
 <Layout title="AZ Vision">
 	<main>
-		<Image src={AZVisionTitleImage} alt="A bird sitting on a nest of eggs."/>
+		<Image src={AZVisionLogoImage} alt="A bird sitting on a nest of eggs."/>
 		<p class="instructions">
 			Vytváříme systémy pro detekci objektů přesně podle Vašich požadavků. Spektrum použití je široké. Kromě
 			jednoduchého počítání objektů je možné „natrénovat“ i na odlišení různých typů objektů v obrazu.
