--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,14 +12,17 @@ import References from '../components/References.astro';
 <Layout 
   title="AZ Vision | Přesné počítání návštěvníků pro retail"
   description="Zvyšte efektivitu vaší prodejny díky AI analýze návštěvnosti. Nabízíme přesné počítání osob, cloudový portál a snadnou integraci. Řešení na míru."
+  keywords="počítání návštěvníků, AI analýza návštěvnosti, retail analytics, people counting, prodejny, obchodní centra, návštěvnost, AZ Vision"
+  canonicalUrl="https://azvision.github.io/"
+  ogImage="https://azvision.github.io/footfall-preview.jpg"
 >
   <main>
-  <HeroSection />
-  <ProductOverview />
-  <Features />
-  <ImplementationSteps />
-  <References />
-  <ContactSection />
-</main>
+    <HeroSection />
+    <ProductOverview />
+    <Features />
+    <ImplementationSteps />
+    <References />
+    <ContactSection />
+  </main>
 </Layout>
 
