--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,9 +1,9 @@
 ---
-// No props needed for now
+import { Image } from 'astro:assets';
 ---
 <section class="hero">
-  <img src="/logo_light.png" alt="AZ Vision logo" class="logo-img" />
-  <h1>AZ Vision Footfall System</h1>
+  <Image src="/logo_light.png" alt="AZ Vision logo" class="logo-img" width={234} height={180} />
+  <h1>Footfall System</h1>
   <p>Moderní řešení pro počítání návštěvníků určené pro Vaše prodejny.</p>
-  <img src="/footfall-preview.jpg" alt="Pohled na retail prostor s návštěvníky" class="hero-img" />
+  <Image src="/footfall-preview.jpg" alt="Pohled na retail prostor s návštěvníky" class="hero-img" width={520} height={286} />
 </section>
