--- a/src/components/References.astro
+++ b/src/components/References.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 ---
 
 <section class="references">
@@ -6,9 +7,11 @@
   <div class="logo-grid">
     <div class="logo-item">
       <a href="https://winshop.cz/en" target="_blank" rel="noopener noreferrer">
-        <img 
+        <Image 
           src="/winshop_logo.png" 
           alt="WinShop Logo"
+          width={180}
+          height={60}
           style="height: 60px; filter: invert(1) brightness(1.5);"
         />
       </a>
@@ -18,9 +21,11 @@
     </div>
     <div class="logo-item">
       <a href="https://corporate.marksandspencer.com/" target="_blank" rel="noopener noreferrer">
-        <img 
+        <Image 
           src="/mas_logo.png" 
           alt="Marks & Spencer Logo"
+          width={180}
+          height={60}
           style="height: 60px; filter: invert(1) brightness(1.5);"
         />
       </a>
