--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 ---
 <section class="features">
-  <h2>Hlavní vlastnosti systému</h2>
+  <h2>Klíčové vlastnosti AI systému pro počítání návštěvníků</h2>
   <ul>
     <li>Přesné počítání osob v reálném čase</li>
     <li>Data jsou ukládána do Microsoft Azure cloudu</li>
