--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -3,7 +3,6 @@ import { Image } from 'astro:assets';
 ---
 <section class="hero">
   <Image src="/logo_light.png" alt="AZ Vision logo" class="logo-img" width={234} height={180} />
-  <h1>Footfall System</h1>
-  <p>Moderní řešení pro počítání návštěvníků určené pro Vaše prodejny.</p>
+  <h1>AI Footfall System - Přesné počítání návštěvníků pro retail</h1>
   <Image src="/footfall-preview.jpg" alt="Pohled na retail prostor s návštěvníky" class="hero-img" width={520} height={286} />
 </section>
