--- a/src/components/References.astro
+++ b/src/components/References.astro
@@ -3,7 +3,7 @@ import { Image } from 'astro:assets';
 ---
 
 <section class="references">
-  <h2>Naši klienti</h2>
+  <h2>Reference a spokojení klienti</h2>
   <div class="logo-grid">
     <div class="logo-item">
       <a href="https://winshop.cz/en" target="_blank" rel="noopener noreferrer">
