--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const {
 	description, 
 	keywords = "počítání návštěvníků, AI analýza, retail, prodejny, návštěvnost, AZ Vision",
 	canonicalUrl = Astro.url.href,
-	ogImage = "/og-image.jpg"
+	ogImage = "/camera_detail.jpg"
 } = Astro.props;
 
 import '../styles/styles.css';
@@ -52,12 +52,13 @@ import '../styles/styles.css';
 		<meta property="og:site_name" content="AZ Vision" />
 		
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMEEK6ZSKG"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-993994636"></script> 
 		<script is:inline>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
-			gtag('config', 'G-ZMEEK6ZSKG');
+			gtag('config', 'AW-993994636'); // Google Ads
+			gtag('config', 'G-ZMEEK6ZSKG'); // Google Analytics
 		</script>
 		
 		<!-- Generator -->
