--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,8 +71,8 @@ import '../styles/styles.css';
 				"@type": "Organization",
 				"name": "AZ Vision",
 				"description": "AZ Vision Footfall System - pokročilý systém pro analýzu návštěvnosti pomocí AI kamer. Nabízíme přesné počítání osob, cloudový portál pro správu více poboček a snadnou integraci s existující infrastrukturou.",
-				"url": "https://azvision.github.io",
-				"logo": "https://azvision.github.io/logo_light.png",
+				"url": "https://www.azvision.cz",
+				"logo": "https://www.azvision.cz/logo_light.png",
 				"contactPoint": {
 					"@type": "ContactPoint",
 					"contactType": "sales",
