--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -6,7 +6,7 @@
   
   <div class="company-info">
     <p><strong>AZ Vision</strong> - česká firma se sídlem v Praze</p>
-    <p>Jsme vývojáři specializující se na práci s počítačovým viděním. Rádi se s vámi setkáme osobně a probereme vaše potřeby přímo u vás nebo v našich prostorách u Arkád Pankrác.</p>
+    <p>Jsme vývojáři specializující se na práci s neuronovými sítěmi a počítačovým viděním. Rádi se s vámi setkáme osobně a probereme vaše potřeby přímo u vás nebo v našich prostorách u Arkád Pankrác.</p>
   </div>
   
   <div class="contact-details">
