--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,8 @@ import References from '../components/References.astro';
   keywords="počítání návštěvníků, AI analýza návštěvnosti, retail analytics, people counting, prodejny, obchodní centra, návštěvnost, AZ Vision"
   canonicalUrl="https://azvision.github.io/"
   ogImage="https://azvision.github.io/footfall-preview.jpg"
+  lang="cs"
+  ogLocale="cs_CZ"
 >
   <main>
     <HeroSection />
